move actions for the question out of the answers (fixes #241)
Also fixes the wrapping of the label; it was inside a box with width:
100% and also left and right padding, which meant that it extended
outisde the question-container and the label could then occasionally
stick out of the box. With this change, the question actions always
stuck outside the box, making the bug obvious. (fixes #237)

--- a/website/static/style/main.css
+++ b/website/static/style/main.css
@@ -2842,6 +2842,10 @@ img {border:0;}
 	cursor: hand;	
 }
 
+.question-actions {
+    float: right;
+}
+
 .ahj_action_flyout {
 	z-index:6000;
 	display:none;
